Amends to confidence levels table on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -225,7 +225,7 @@
 
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Register email</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/email">Register email</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Design iterated following research, needs validating</td>
@@ -253,14 +253,14 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/app-check">Authenticator app setup</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/qr">Authenticator app setup</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Sign in email</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/email">Sign in email</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Design iterated following research, needs validating</td>
@@ -274,7 +274,7 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Password reset</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/reset-password/start">Password reset</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored</td>
@@ -302,14 +302,14 @@
                     </tr>
 
                      <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Organisation details</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/view/capita">Organisation details</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Delete organisation</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/view/capita">Delete organisation</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
                         <td class="govuk-table__cell"></td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
@@ -331,17 +331,24 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">User details</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/view/single">User details</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
                      <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Delete user</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/view/single">Delete user</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l3/dashboard">Organisation admin dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Tested well with one user so far</td>
                     </tr>
 
                 </tbody>
