--- a/app/views/index.html
+++ b/app/views/index.html
@@ -223,6 +223,16 @@
                     </tr>
                 </thead>
 
+                
+
+                <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/add-service/start">Add your service</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v6/l2/users/register/email">Register email</a></td>
