--- a/app/views/v6/add-service/summary.html
+++ b/app/views/v6/add-service/summary.html
@@ -405,7 +405,7 @@
                 </div>
             </dl>
 
-            <form action="/form-handler" method="post" novalidate>
+            <form action="confirmation" method="post" novalidate>
                 <input type="hidden" name="answers-checked" value="true">
 
                 {{ govukButton({
