--- a/app/views/v6/l2/users/reset-password/start.html
+++ b/app/views/v6/l2/users/reset-password/start.html
@@ -25,20 +25,19 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Reset your password</h1>
 
-            <h2 class="govuk-heading-s">Before you start, you'll need:</h2>
+            <h2 class="govuk-heading-s">Before you start, you will need:</h2>
             <ul class="govuk-list govuk-list--bullet">
-                <li>Your email address</li>
-                <li>The mobile phone linked to your DWP Authenticate account</li>
+                <li>access to the email account you use to sign in to the DWP Authenticate admin portal</li>
+                <li>the mobile phone you use to sign in to the DWP Authenticate admin portal</li>
             </ul>
 
             <h2 class="govuk-heading-s">What will happen:</h2>
             <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
-                <li>Enter the email address you normally use to sign in.</li>
-                <li>We’ll send you an email with a password reset code.</li>
+                <li>Enter the email address you use to sign in.</li>
+                <li>We will send you an email with a password reset code.</li>
                 <li>Enter the password reset code.</li>
-                <li>Authenticate with the code we send in a text message or using an authenticator app.</li>
+                <li>Authenticate with your mobile phone, using an authenticator app or a text message code.</li>
                 <li>Create a new password.</li>
-                <li>You’ll be signed in to DWP Authenticate.</li>
             </ol>
 
             {{ govukButton({
