--- a/app/views/v6/l2/users/reset-password/password.html
+++ b/app/views/v6/l2/users/reset-password/password.html
@@ -25,20 +25,21 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Create a new password</h1>
 
-            <p>Your password must be 8 characters or more.</p>
+                    <p>Your password must be 8 characters or more.</p>
 
-            <p>It must include at least:</p>
+                    <p>It must include at least:</p>
 
-            <ul class="govuk-list govuk-list--bullet">
-                <li>one upper case letter</li>
-                <li>one lower case letter</li>
-                <li>one number</li>
-                <li>one of these special characters: @ # $ % ^ & * - _ ! + = [ ] { } | \ : ‘ , . ? / ` ~ " ( ) ;</li>
-            </ul>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>one upper case letter</li>
+                        <li>one lower case letter</li>
+                        <li>one number</li>
+                        <li>one special character</li>
+                    </ul>
 
-            <p>
-                It cannot include special characters that are not on this list.
-            </p>
+                    {{ govukDetails({
+                        summaryText: "Which special characters can I use?",
+                        html: 'You can use the following special characters: @ # $ % ^ & * - _ ; ! + = [ ] { } | \ : ‘ , . ? / ` ~ " ( ) '
+                      }) }}
 
             <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="width-20">
