Updates to general changes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -207,6 +207,9 @@
                 <li>
                     Amended <a href="/v6/l2/users/register/code">2FA</a> code based on UR findings
                 </li>
+                <li>
+                    Made content changes to password reset journeys
+                </li>
             </ul>
 
 
