--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -585,3 +585,38 @@ p.govuk-filter-reset {
 .contains-remove-button {
     width: 75%;
 }
+
+/**
+ * Table sorting header styles for plugin
+ */
+.govuk-table.sort,
+.govuk-table__header[aria-sort="descending"],
+.govuk-table__header[aria-sort="ascending"] {
+    color: $govuk-link-colour;
+    text-decoration: underline;
+    position: relative;
+}
+
+.sort .govuk-table__header {
+    cursor: pointer;
+}
+
+.govuk-table__header[aria-sort="descending"]::after,
+.govuk-table__header[aria-sort="ascending"]::after {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    vertical-align: middle;
+    margin-left: 6px;
+}
+
+.govuk-table__header[aria-sort="descending"]::after {
+    border-bottom: 8px solid $govuk-link-colour;
+}
+
+.govuk-table__header[aria-sort="ascending"]::after {
+    border-top: 8px solid $govuk-link-colour;
+}
