Add link to new React single page userlist test

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -210,6 +210,9 @@
                 <li>
                     Made content changes to password reset journeys
                 </li>
+                <li>
+                    React single pager for <a href="/single/users/" class="govuk-link">User list/Single user view</a> researching. Added to complexity required in user research testing scenarios.
+                </li>
             </ul>
 
 
@@ -226,7 +229,7 @@
                     </tr>
                 </thead>
 
-                
+
 
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
