Loading message while large JS loads

--- a/app/views/single/users/index.html
+++ b/app/views/single/users/index.html
@@ -11,7 +11,9 @@
 
 {% block content %}
     <div class="govuk-width-container">
-        <div id="users-root"></div>
+        <div id="users-root">
+            <span class="govuk-heading-m">Please wait. Loading data.</span>
+        </div>
     </div>
 {% endblock %}
 
