--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -620,3 +620,39 @@ p.govuk-filter-reset {
 .govuk-table__header[aria-sort="ascending"]::after {
     border-top: 8px solid $govuk-link-colour;
 }
+
+
+/**
+ * user search box
+ */
+.user-search-box{
+    margin-left:20px;
+}   
+
+.user-search-box .govuk-input{
+    float:left;
+}
+.user-search-box .govuk-button{
+    float:left;
+    border: 0;
+    cursor: pointer;
+    border-radius: 0;
+    position: relative;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    background-image: url(https://assets.publishing.service.gov.uk/frontend/govuk_publishing_components/search-button-ca89b2a79f944909ceb7370d3f0b78811d32b96e883348fcd8886f63dd619585.png);
+    background-repeat: no-repeat;
+    background-position: 2px 50%;
+    text-indent: -5000px;
+    overflow: hidden;
+    background-color: #1d70b8;
+    box-shadow: none;
+    margin-left:-2px;
+}
+
+
+hr.user-search-border{
+    border-bottom:1px solid #b1b4b6;
+    margin:-10px 0 30px 0;
+}
