--- a/app/views/v6/l2/users/view/search-test.html
+++ b/app/views/v6/l2/users/view/search-test.html
@@ -46,7 +46,41 @@ w{% extends "layout.html" %}
 
         <hr class="user-search-border">
 
-        {% include "./includes/sorting-filtering.html" %}
+       <div class="govuk-grid-row">
+           <div class="govuk-grid-column-full">
+               <div class="govuk-form-group">
+                    <label class="govuk-label govuk-label--s" for="sort">
+                        Filter user list
+                    </label>
+
+                    <select class="govuk-select govuk-!-margin-right-1" id="filter-users-orgs" name="filter-users-orgs">
+                        <option value="all-organisations">All organisations</option>
+                        <option value="Capita">Capita</option>
+                        <option value="DWP">DWP</option>
+                        <option value="Croydon">London Borough of Croydon Council</option>
+                        <option value="Remploy">Remploy</option>
+                        <option value="Serco">Serco</option>
+                    </select>
+
+                    <select class="govuk-select govuk-!-margin-right-1" id="filter-users-status" name="filter-users-status">
+                        <option value="all-statuses">All statuses</option>
+                        <option value="access-expired">Access expired</option>
+                        <option value="active">Active</option>
+                        <option value="invite-expired">Invite expired</option>
+                        <option value="invite-sent">Invite sent</option>
+                    </select>
+
+                    <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+                        Update
+                    </button>
+
+                    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                        Clear
+                    </button>
+                </div>
+           </div>
+       </div>
+       
 
 
 
