--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -117,30 +117,6 @@ body * {
 /**
  * pagination from: https://home-office-digital-patterns.herokuapp.com/components/pagination
  */
-.pagination .pagination_list-items {
-  li {
-    display: inline-block;
-
-    a {
-      color: #005EA5;
-      display: inline-block;
-      padding: 15px 5px 10px 5px;
-      margin-right: 15px;
-      text-decoration: none;
-
-      &:focus {
-        outline: 0;
-      }
-    }
-
-    &.active a,
-    &.active a:hover {
-      color: #005EA5;
-      box-shadow: inset 0px -5px 0px 0px #005EA5;
-    }
-  }
-}
-
 .pagination {
   padding: 0;
   margin: 0;
@@ -153,22 +129,35 @@ body * {
 }
 
 .pagination__link {
-  display: block;
-  padding: 5px 10px;
-  text-decoration: none;
+    display: block;
+    padding: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #005EA5;
+    display: inline-block;
+    margin-right: 15px;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
 
-  &.current {
-    font-weight: 700;
-  }
+    &:hover,
+    &:focus {
+        background: #F8F8F8;
+        outline: 3px solid #FFBF47;
+    }
 
-  &.current,
-  &.disabled {
-    color: #0B0C0C;
-    border: none;
-    pointer-events: none;
-    cursor: default;
-    font-family: $govuk-font-family;
-  }
+    &.current {
+        font-weight: 700;
+    }
+
+    &.current,
+    &.disabled {
+        color: #0B0C0C;
+        border: none;
+        pointer-events: none;
+        cursor: default;
+        font-family: $govuk-font-family;
+    }
 }
 
 a.pagination__link:hover,
@@ -627,7 +616,7 @@ p.govuk-filter-reset {
  */
 .user-search-box{
     margin-left:20px;
-}   
+}
 
 .user-search-box .govuk-input{
     float:left;
