--- a/app/views/v6/l2/users/view/search-test.html
+++ b/app/views/v6/l2/users/view/search-test.html
@@ -57,6 +57,7 @@ w{% extends "layout.html" %}
                         <option value="all-organisations">All organisations</option>
                         <option value="Capita">Capita</option>
                         <option value="DWP">DWP</option>
+                        <option value="G4S">G4S</option>
                         <option value="Croydon">London Borough of Croydon Council</option>
                         <option value="Remploy">Remploy</option>
                         <option value="Serco">Serco</option>
