Amends to index changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -213,6 +213,12 @@
                 <li>
                     React single pager for <a href="/single/users/" class="govuk-link">User list/Single user view</a> researching. Added to complexity required in user research testing scenarios.
                 </li>
+                <li>
+                    Added revised user list filter controls
+                </li>
+                <li>
+                    Added a basic search - search by complete email address 
+                </li>
             </ul>
 
 
