--- a/app/views/v6/l2/users/view/search-test.html
+++ b/app/views/v6/l2/users/view/search-test.html
@@ -11,8 +11,6 @@ w{% extends "layout.html" %}
 
 {% block content %}
     <div class="govuk-width-container">
-        
-
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
                 <h1 class="govuk-heading-l listing-page">Users</h1>
@@ -24,17 +22,17 @@ w{% extends "layout.html" %}
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-one-half">
                     <div class="user-search-box">
-        
                         <div class="govuk-form-group">
                             <label class="govuk-label govuk-label--s" for="user-search">
                                 Search for a user
                             </label>
+
                             <span id="user-search-hint" class="govuk-hint">
                                 Enter the user's full email address
                             </span>
-                            <input class="govuk-input govuk-input--width-20" id="user-search" name="user-search" type="text" aria-describedby="user-search-hint" spellcheck="false">
-                        
-                        
+
+                            <input class="govuk-input" id="user-search" name="user-search" type="text" aria-describedby="user-search-hint" spellcheck="false">
+
                             <button class="govuk-button" data-module="govuk-button">
                                 Search
                             </button>
@@ -44,9 +42,7 @@ w{% extends "layout.html" %}
             </div>
         </div>
 
-        <hr class="user-search-border">
-
-       <div class="govuk-grid-row">
+       <div class="govuk-grid-row filter-block">
            <div class="govuk-grid-column-full">
                <div class="govuk-form-group">
                     <label class="govuk-label govuk-label--s" for="sort">
@@ -81,9 +77,6 @@ w{% extends "layout.html" %}
                 </div>
            </div>
        </div>
-       
-
-
 
         <table class="govuk-table">
             {% include "./includes/user-view-table-head.html" %}
