Fix Stu's search test bits I broke

--- a/app/views/v6/l2/users/view/search-test.html
+++ b/app/views/v6/l2/users/view/search-test.html
@@ -33,7 +33,7 @@ w{% extends "layout.html" %}
 
                             <input class="govuk-input" id="user-search" name="user-search" type="text" aria-describedby="user-search-hint" spellcheck="false">
 
-                            <button class="govuk-button" data-module="govuk-button">
+                            <button class="search-button">
                                 Search
                             </button>
                         </div>
