Update index description for React app

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -189,16 +189,15 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    React single pager for <a href="/single/users/" class="govuk-link">User list/Single user view</a> researching. Added to complexity required in user research testing scenarios.
+                    Added a React single-pager app for <a href="/single/users/" class="govuk-link">User list/Single user view/Email search results</a> researching. Added due to complexity required in user research testing scenarios, and lack of flexibility for this in prototype kit.
                 </li>
                 <li>
                     Added revised user list filter controls
                 </li>
                 <li>
-                    Added a basic search - search by complete email address 
+                    Added a basic search - search by complete email address
                 </li>
             </ul>
-
 
             <h3 class="govuk-heading-s">Confidence level</h3>
 
@@ -212,8 +211,6 @@
 
                     </tr>
                 </thead>
-
-
 
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
@@ -558,7 +555,7 @@
                 <li>
                     Made content changes to password reset journeys
                 </li>
- 
+
             </ul>
 
 
