Start org basics, inject two John Smiths for UR (has some issues)

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -189,7 +189,7 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    Added a React single-pager app for <a href="/single/users/" class="govuk-link">User list/Single user view/Email search results</a> researching. Added due to complexity required in user research testing scenarios, and lack of flexibility for this in prototype kit.
+                    Added React single-pager apps for <a href="/single/users/" class="govuk-link">User list/Single user view/Email search results</a> and <a href="/single/orgs/" class="govuk-link">organisations list</a> researching. Added due to complexity required in user research testing scenarios, and lack of flexibility for this in prototype kit.
                 </li>
                 <li>
                     Added revised user list filter controls
